--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,8 @@
       font-size: 0.8em;
       position: fixed;
       bottom: 0;
+      left: 0;
+      right: 0;
     }
     .section {
       display: flex;
